<resources>
    <string name="app_name">TheOne</string>
    <string name="email_signup"><u>邮箱注册</u></string>
    <string name="phone_signup">手机注册</string>
    <string name="login">登录</string>
    <string name="Back">Back</string>
    <string name="login_account">账号</string>
    <string name="relogin">请重新登录</string>
    <string name="phone_signup1">请输入手机号码</string>
    <string name="phone_signup2">获取验证码</string>
    <string name="phone_signup3">验证码</string>
    <string name="phone_signup4">验证手机</string>
    <string name="register_nickname">恭喜您的手机通过验证!</string>
    <string name="register_nickname1">您注册账户为13223456334，请设置昵称和密码</string>
    <string name="nickname">昵称</string>
    <string name="password">密码 6-16位字符，区分大小写</string>
    <string name="register">注册</string>
    <string name="i_am">我是</string>
    <string name="manifesto">属性选择</string>
    <string name="Cancel">取消</string>
    <string name="manifesto1">属性一旦确定不可以修改，请确认自己的选择</string>
    <string name="manifesto2">您也不会看到另一个属性的用户及内容</string>
    <string name="manifesto3">您选择了%s属性,属性一旦确认,不可更改!</string>
    <string name="Done">确定</string>
    <string name="register_email">请输入您的邮箱</string>
    <string name="register_email1">为了账户的安全和找回密码，请使用真实的信息</string>
    <string name="email_signup1">邮箱注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register_tip1">您的手机号用于接受验证码和您的个人账户依据,TheOne绝不会泄露您的个人信息!为了账户安全和找回密码,请使用真实的信息!</string>
    <string name="register_tip2"><u>使用条款与隐私政策</u></string>
    <string name="register_tip3">志同天下 版权所有</string>
    <string name="register_tip4">Copyright 2014, ZhiTongTianXia, Beijing.</string>
    <string name="register_tip5">All Rights Reserved</string>
    <string name="register_tip6">您的邮箱用于您的个人账户依据,TheOne绝不会泄露您的个人信息!</string>
    <string name="register_invite_code_desc1">还没有TheOne邀请码?!</string>
    <string name="register_invite_code_desc2"><u>你Out啦! 去看看</u></string>
    <string name="confirm">确定</string>
    <string name="resend">重发验证码</string>
    <string name="find_forget">忘记密码</string>
    <string name="verification">身份验证</string>
    <string name="reset_password">重置密码</string>
    <string name="mainfesto1">属性一旦确定，不能更改。</string>
    <string name="setting">条件设置</string>
    <string name="send_pm">转发到私聊</string>
    <string name="old_password">请输入旧密码</string>
    <string name="verification_password">验证密码</string>
    <string name="verification_password_error">密码不正确,请重新输入</string>
    <string name="read_privacy_title">隐私条款</string>
    <string name="tab_item_theone">ONE</string>
    <string name="tab_item_discover">发现</string>
    <string name="tab_item_publish">发布</string>
    <string name="tab_item_chat">消息</string>
    <string name="tab_item_me">我</string>
    <string name="common_number_unit_wan">%#.2fW.</string>
    <string name="common_number_unit_yi">%#.2fY.</string>
    <string name="login_check_network">网络不可用</string>
    <string name="phone_bind_button">确定</string>
    <string name="cancel">取消</string>
    <string name="trends">动态</string>
    <string name="like">赞</string>
    <string name="pm">私聊</string>
    <string name="comment">评论</string>
    <string name="follow">关注</string>
    <string name="unfollow">已关注</string>
    <string name="all_follow">互相关注</string>
    <string name="condition_setting">条件设置</string>
    <string name="condition_setting_success">设置成功</string>
    <string name="condition_setting_fail">设置失败,请检查网络配置</string>
    <string name="start_screening">开启筛选</string>
    <string name="look_avatar">头像模式</string>
    <string name="look_avatar1">打开后，主页将只显示用户头像</string>
    <string name="role">角色</string>
    <string name="role_unknow">保密</string>
    <string name="role_server_unknow">unknown</string>
    <string name="purpose">交友目的(最多 3 个)</string>
    <string name="purpose1">聊天</string>
    <string name="purpose2">约会</string>
    <string name="purpose3">朋友</string>
    <string name="purpose4">恋人</string>
    <string name="purpose5">乐子</string>
    <string name="purpose6">兴趣</string>
    <string name="on_line">当前在线</string>
    <string name="area">所在地区</string>
    <string name="age">年龄</string>
    <string name="height">身高</string>
    <string name="interest">兴趣标签</string>
    <string name="phone">手机通讯录</string>
    <string name="add_friend">添加联系人</string>
    <string name="registered_friend">已加入联系人</string>
    <string name="unregistered_friend">未加入联系人</string>
    <string name="add_friend_recommendations">为你推荐</string>
    <string name="add_friend_other_recommendations">换一批</string>
    <string name="invite_friend">邀请</string>
    <string name="invite_friend_detail">邀请您使用TheOne</string>
    <string name="mblog_details">详情</string>
    <string name="mblog_comment">全部%s条评论...</string>
    <string name="distance_km">km</string>
    <string name="confirmation_delete_1">确认删除当前评论吗</string>
    <string name="mblog_delete_fail">删除失败,请检查网络配置</string>
    <string name="copy_mblog">文字内容已经复制到剪切板</string>
    <string name="get_mblog_fail">获取失败,请检查网络配置</string>
    <string name="video">视频</string>
    <string name="photograph">拍照</string>
    <string name="album">相册</string>
    <string name="Use">使用</string>
    <string name="Loading">Loading&#8230;</string>
    <string name="saving_image">Saving&#8230;</string>
    <string name="add_label">单击照片添加品牌，地点，人物或任意标签</string>
    <string name="add_label1">添加标签</string>
    <string name="need_to_add_label">至少添加一个标签</string>
    <string name="add_label2">标签</string>
    <string name="add_label3">地点</string>
    <string name="add_label4">人物</string>
    <string name="search">搜索</string>
    <string name="find_search">搜索用户&#12289;品牌&#12289;地点&#12289;兴趣</string>
    <string name="add_friend_search">请输入ID&#12289;昵称</string>
    <string name="remake">重拍</string>
    <string name="next">下一步</string>
    <string name="say">说点什么吧&#8230;</string>
    <string name="say1">所有人</string>
    <string name="say2">我关注的</string>
    <string name="say3">密友</string>
    <string name="release">发布</string>
    <string name="recorder">重录后将自动替换上一条录音</string>
    <string name="new_add_label">新添加标签: </string>
    <string name="confirmation">确认</string>
    <string name="publish_mblog_fail">发布失败,请检查网络配置</string>
    <string name="confirmation_delete">您要删除当前标签吗</string>
    <string name="delete">删除</string>
    <string name="video_error">视频录制异常，请重试。</string>
    <string name="ta">Ta的资料</string>
    <string name="ta_like">Ta 喜欢</string>
    <string name="add_a_photo">添加照片</string>
    <string name="take_photo">拍一张</string>
    <string name="choose_photo">相册选取</string>
    <string name="followed_by">粉丝</string>
    <string name="media">照片</string>
    <string name="like_by">被赞</string>
    <string name="comments">评论</string>
    <string name="qq">邀请QQ好友</string>
    <string name="touxiang">头像</string>
    <string name="birthday">生日</string>
    <string name="xinghun">有形婚意向</string>
    <string name="intent">兴趣标签</string>
    <string name="me_message">我的信息</string>
    <string name="save">保存</string>
    <string name="send">发送</string>
    <string name="add_comment">添加一句评论</string>
    <string name="like_by1">他们赞过</string>
    <string name="age_year">岁</string>
    <string name="height_cm">cm</string>
    <string name="set_alias_title">%s的备注名</string>
    <string name="set_alias">给Ta设置备注名</string>
    <string name="set_alias_success">设置备注名成功</string>
    <string name="set_alias_fail">设置备注名失败</string>
    <string name="star">密友</string>
    <string name="unstar">取消密友</string>
    <string name="recommend_friend">把Ta推荐给我的朋友</string>
    <string name="report">举报</string>
    <string name="set_nickname_title">修改昵称</string>
    <string name="set_nickname">请输入新昵称</string>
    <string name="circle">%1$s 被圈了%2$s次</string>
    <string name="setting_title">设置</string>
    <string name="setting_privacy_title">隐私</string>
    <string name="setting_notify_title">通知</string>
    <string name="setting_general_title">通用</string>
    <string name="setting_only_following_chat">允许陌生人跟我跟私聊</string>
    <string name="setting_only_following_group_chat">允许陌生人拉我群聊</string>
    <string name="setting_find_me_from_phone_number">允许通过手机号找到我</string>
    <string name="setting_update_password">密码修改</string>
    <string name="setting_new_message_notify">新消息通知</string>
    <string name="setting_sound_notify">声音</string>
    <string name="setting_vibrate_notify">震动</string>
    <string name="setting_notify_detail">通知详情</string>
    <string name="setting_notify_detail_desc">打开后,有新消息时,将在通知栏显示昵称与内容摘要</string>
    <string name="setting_night_anti_disturb">夜间防打扰</string>
    <string name="setting_night_anti_disturb_desc">打开后,23:00-09:00期间,锁屏状态下将暂时不提醒新消息</string>
    <string name="setting_new_mblog_notify">动态更新提醒</string>
    <string name="setting_new_mblog_notify_desc">关闭该选项后,不再提醒朋友动态更新</string>
    <string name="setting_clear_chat_history">清空聊天记录</string>
    <string name="setting_new_apk_check">更新检查</string>
    <string name="setting_clear_cache">清理缓存</string>
    <string name="get_register_invite_code">我的邀请码</string>
    <string name="register_invite_text">邀请码</string>
    <string name="register_invite_text_choose">邀请码(选填)</string>
    <string name="copy_register_invite_code">复制邀请码</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">退出登录</string>
    <string name="shera">分享</string>
    <string name="my_register_invite_code">我的专属邀请码</string>
    <string name="my_register_invite_code_fan1">1度粉丝</string>
    <string name="my_register_invite_code_fan2">2度粉丝</string>
    <string name="my_register_invite_code_from">你注册使用的验证码 : %1$s来自%2$s</string>
    <string name="register_invite_code_1">1.这是TheOne用户专属的邀请码！</string>
    <string name="register_invite_code_1_1">每一位TheOne都会有Ta的专属邀请码,其他用户可以通过该邀请码注册TheOne,专属邀请码永久有效!</string>
    <string name="register_invite_code_2">2.这是会疯狂涨粉丝的邀请码！</string>
    <string name="register_invite_code_2_1">你的邀请码每被使用一次,使用者就会自动成为你的粉丝!神奇不止于此,该使用者的邀请码粉丝同样也会成为你的粉丝!二度人脉自然看得见,其乐无穷!</string>
    <string name="register_invite_code_3">3.这么diao的邀请码，去哪里找？！</string>
    <string name="register_invite_code_3_1">寻找身边的TheOne用户,向他们索取邀请码.</string>
    <string name="register_invite_code_4">说明:Gay和Les之间可以相互共享邀请码,但邀请成功后看不到彼此的内容.</string>
    <string name="invite_code">邀请码详情</string>
    <string name="share_invite_code">%1$s 是我的TheOne专属邀请码,您可以使用它来注册TheOne啦!</string>
    <string name="app_content">做好自己 剩下的交给时间</string>
    <string name="invite_content">一起加入TheOne吧!</string>
    <string name="discover">发现</string>
    <string name="discover_hot">热门</string>
    <string name="discover_new">最新</string>
    <string name="label">标签</string>
    <string name="user">用户</string>
    <string name="find_user">找到%1$s个与\"%2$s\"相关的用户</string>
    <string name="nearby">附近</string>
    <string name="filter_unlimit">不限</string>
    <string name="filter_height_min">cm以下</string>
    <string name="filter_height_max">cm以上</string>
    <string name="filter_height">cm</string>
    <string name="filter_age_min">岁以下</string>
    <string name="filter_age_max">岁以上</string>
    <string name="filter_age">岁</string>
    <string name="chat">聊天</string>
    <string name="chat_member">聊天成员</string>
    <string name="new_message">新消息通知</string>
    <string name="no_new_message">暂时没有新的通知</string>
    <string name="stay_top">置顶聊天</string>
    <string name="clear_chat">清空聊天记录</string>
    <string name="exit_group">删除并退出</string>
    <string name="chat_info">聊天</string>
    <string name="stared">密友</string>
    <string name="plus1">相册</string>
    <string name="plus2">拍照</string>
    <string name="plus3">位置</string>
    <string name="plus4">名片</string>
    <string name="audio">语音</string>
    <string name="start_chat">发起群聊</string>
    <string name="group_name">群聊名称</string>
    <string name="group_sun">%1$d人</string>
    <string name="group_name_in_chat">群聊(%1$d)</string>
    <string name="hold_to_talk">按住录音</string>
    <string name="home_page_empty">你的朋友也在这里,</string>
    <string name="home_page_empty1">快去关注他们吧!</string>
    <string name="home_page_empty2">点此去找人</string>
</resources>