<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <com.theone.sns.util.uiwidget.EditTextWithClear
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/ios7_white" >

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/registration_email_icon"
                android:drawablePadding="4dip"
                android:hint="@string/register_email"
                android:paddingLeft="8dip"
                android:singleLine="true"
                android:textColorHint="@color/iphone_hint" />
        </com.theone.sns.util.uiwidget.EditTextWithClear>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/iphone_line" />

        <com.theone.sns.util.uiwidget.EditTextWithClear
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/ios7_white" >

            <EditText
                android:id="@+id/register_invite_code"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/registration_invite_code"
                android:drawablePadding="4dip"
                android:hint="@string/register_invite_text_choose"
                android:imeOptions="actionDone"
                android:paddingLeft="8dip"
                android:singleLine="true"
                android:textColorHint="@color/iphone_hint" />
        </com.theone.sns.util.uiwidget.EditTextWithClear>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/register_email1" />

        <com.theone.sns.util.uiwidget.EditTextWithClear
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/ios7_white" >

            <EditText
                android:id="@+id/nick_name"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/login_user_icon"
                android:drawablePadding="4dip"
                android:hint="@string/nickname"
                android:paddingLeft="8dip"
                android:singleLine="true"
                android:textColorHint="@color/iphone_hint" />
        </com.theone.sns.util.uiwidget.EditTextWithClear>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/iphone_line" />

        <com.theone.sns.util.uiwidget.EditTextWithClear
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/ios7_white" >

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/login_password_icon"
                android:drawablePadding="4dip"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:paddingLeft="8dip"
                android:singleLine="true"
                android:textColorHint="@color/iphone_hint" />
        </com.theone.sns.util.uiwidget.EditTextWithClear>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip" >

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/register_invite_code_desc1"
                android:textColor="@color/color_929292" />

            <TextView
                android:id="@+id/invite_code_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_toRightOf="@id/text1"
                android:drawablePadding="5dip"
                android:drawableRight="@drawable/iphone_submenu_normal"
                android:gravity="right"
                android:text="@string/register_invite_code_desc2"
                android:textColor="@color/color_929292" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="15dip"
            android:text="@string/register_tip6"
            android:textColor="@color/color_929292" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dip"
            android:gravity="bottom"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/read_privacy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip2"
                android:textColor="@color/color_929292"
                android:textStyle="italic" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip3"
                android:textColor="@color/color_929292" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip4"
                android:textColor="@color/color_929292" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip5"
                android:textColor="@color/color_929292" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>