<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/ios7_white" >

            <LinearLayout
                android:id="@+id/phone_num_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <com.theone.sns.util.uiwidget.EditTextWithClear
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/phone_num"
                        android:layout_width="fill_parent"
                        android:layout_height="50dip"
                        android:background="@null"
                        android:digits="0123456789"
                        android:drawableLeft="@drawable/registration_phone_icon"
                        android:drawablePadding="4dip"
                        android:hint="@string/phone_signup1"
                        android:inputType="number"
                        android:paddingLeft="8dip"
                        android:singleLine="true"
                        android:textColorHint="@color/iphone_hint" />
                </com.theone.sns.util.uiwidget.EditTextWithClear>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/validate_phone"
                    android:layout_width="100dip"
                    android:layout_height="50dip"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/registration_send_phone_signup"
                    android:gravity="center"
                    android:text="@string/phone_signup4"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="1px"
                    android:layout_height="50dip"
                    android:layout_toLeftOf="@id/validate_phone"
                    android:background="@color/iphone_line" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/iphone_line" />

        <com.theone.sns.util.uiwidget.EditTextWithClear
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/ios7_white" >

            <EditText
                android:id="@+id/validate_num"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_weight="1"
                android:background="@null"
                android:digits="0123456789"
                android:drawableLeft="@drawable/registration_verification"
                android:drawablePadding="4dip"
                android:hint="@string/phone_signup3"
                android:inputType="number"
                android:paddingLeft="8dip"
                android:singleLine="true"
                android:textColorHint="@color/iphone_hint" />
        </com.theone.sns.util.uiwidget.EditTextWithClear>

        <Button
            android:id="@+id/register_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/registration_send"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="30dip"
            android:text="@string/register_tip1"
            android:textColor="@color/color_929292" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dip"
            android:gravity="bottom"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/read_privacy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip2"
                android:textColor="@color/color_929292"
                android:textStyle="italic" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip3"
                android:textColor="@color/color_929292" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip4"
                android:textColor="@color/color_929292" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/register_tip5"
                android:textColor="@color/color_929292" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>