<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.theone.sns.util.uiwidget.EditTextWithClear
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="@color/ios7_white" >

        <EditText
            android:id="@+id/verification_num"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="4dip"
            android:hint="@string/old_password"
            android:paddingLeft="20dip"
            android:singleLine="true"
            android:textColorHint="@color/iphone_hint" />
    </com.theone.sns.util.uiwidget.EditTextWithClear>
    
    <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:padding="20dip"
            android:textColor="@color/color_929292" />

    <Button
        android:id="@+id/validate_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:background="@drawable/registration_send"
        android:text="@string/verification_password"
        android:textSize="15sp"
        android:textColor="@color/white" />

</LinearLayout>